--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
   "favicon": ":wave:",
   "name": "Sweater Weather",
   "short_name": "sweater-weather",
-  "start_url": "/",
+  "start_url": "/sweater-weather",
   "background_color": "#fefefe",
   "description": "A webapp to help you decide if you need to wear a sweater or not",
   "theme_color": "#000",
