--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "axios": "^0.19.0",
     "crypto-js": "^3.1.9-1",
     "gh-pages": "^2.1.1",
+    "node-sass": "^4.12.0",
     "react-double-marquee": "^0.3.4",
     "react-marquee": "^1.0.0",
-    "react-motion": "^0.5.2"
+    "react-motion": "^0.5.2",
+    "react-tippy": "^1.2.3"
   }
 }
