Adding offline support

--- a/manifest.json
+++ b/manifest.json
@@ -8,5 +8,6 @@
   "theme_color": "#000",
   "icon": "sweater.png",
   "iconBackground": "#fefefe",
-  "display": "standalone"
+  "display": "standalone",
+  "offline": {}
 }
