Adding offline support

--- a/manifest.json
+++ b/manifest.json
@@ -9,5 +9,7 @@
   "icon": "sweater.png",
   "iconBackground": "#fefefe",
   "display": "standalone",
-  "offline": {}
+  "offline": {
+    "responseStrategy": "network-first"
+  }
 }
